syntax = "proto3";

option go_package = "./proto";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "proto/customer.proto";

message Cart {
  int64 ID = 1;
  int64 CustomerID = 2;
  int64 ProductID = 3;
  int64 Quantity = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp UpdatedAt = 6;
}

message CartCreateReq {
  int64 CustomerID = 1;
  int64 ProductID = 2;
  int64 Quantity = 3;
}

message CartUpdateReq {
  int64 ID = 1;
  int64 Quantity = 4;
}

message CartID {
  int64 ID = 1;
}

service CartService {
  rpc FindOneByID(CartID) returns (Cart);
  rpc FindAll(google.protobuf.Empty) returns (stream Cart);
  rpc FindAllByCustomerID(CustomerID) returns (stream Cart);
  rpc Create(CartCreateReq) returns (Cart);
  rpc Update(CartUpdateReq) returns (Cart);
  rpc Delete(CartID) returns (google.protobuf.Empty);
}